# prelegal

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  catalog.json
backend/: README.md  pyproject.toml
backend/app/: db.py  main.py  schemas.py
backend/app/routers/: auth.py
backend/tests/: conftest.py  test_auth.py  test_static.py
frontend/: MANUAL_TESTING.md  README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.mts  vitest.setup.ts
frontend/app/: layout.tsx  page.tsx
frontend/components/: AuthGate.test.tsx  AuthGate.tsx  LoginScreen.test.tsx  LoginScreen.tsx  NdaEditor.test.tsx  NdaEditor.tsx  NdaForm.test.tsx  NdaForm.tsx  NdaPreview.test.tsx  NdaPreview.tsx
frontend/e2e/: helpers.ts  layout.spec.ts  login.spec.ts  mutual-nda-creator.spec.ts
frontend/lib/: apiBase.ts  auth.ts  buildDocument.test.ts  buildDocument.ts  fillCoverPage.test.ts  fillCoverPage.ts  loadTemplates.test.ts  loadTemplates.ts  mutualNdaPdf.test.tsx  mutualNdaPdf.tsx  types.test.ts  types.ts
scripts/: start-mac.sh  start-windows.ps1  stop-windows.ps1
templates/: LICENSE.txt
